import getSizeStyles from '@extensions/styles/helpers/getSizeStyles';

jest.mock('../../getDefaultAttribute', () => {
	return jest.fn(attribute => {
		return attribute.includes('general') ? false : undefined;
	});
});

describe('getSizeStyles', () => {
	it('Get a correct size styles', () => {
		const object = {
			'size-advanced-options': true,
			'max-width-unit-general': 'px',
			'max-width-general': '2',
			'width-unit-general': 'px',
			'width-general': '1',
			'min-width-unit-general': 'px',
			'min-width-general': '2',
			'max-height-unit-general': 'px',
			'max-height-general': '3',
			'height-unit-general': 'px',
			'height-general': '4',
			'min-height-unit-general': 'px',
			'min-height-general': '1',
			'max-width-xxl': '2',
			'width-unit-xxl': 'px',
			'width-xxl': '3',
			'min-width-xxl': '4',
			'max-height-unit-xxl': 'px',
			'max-height-xxl': '1',
			'height-xxl': '2',
			'min-height-unit-xxl': 'px',
			'min-height-xxl': '2',
			'max-width-unit-xl': 'px',
			'max-width-xl': '3',
			'width-unit-xl': 'px',
			'width-xl': '4',
			'min-width-unit-xl': 'px',
			'min-width-xl': '1',
			'max-height-unit-xl': 'px',
			'max-height-xl': '2',
			'height-unit-xl': 'px',
			'height-xl': '3',
			'min-height-unit-xl': 'px',
			'min-height-xl': '4',
			'max-width-unit-l': 'px',
			'max-width-l': '2',
			'width-unit-l': 'px',
			'width-l': '1',
			'min-width-unit-l': 'px',
			'min-width-l': '3',
			'max-height-unit-l': 'px',
			'max-height-l': '2',
			'height-unit-l': 'px',
			'height-l': '1',
			'min-height-unit-l': 'px',
			'min-height-l': '1',
			'max-width-unit-m': 'px',
			'max-width-m': '2',
			'width-unit-m': 'px',
			'width-m': '3',
			'min-width-unit-m': 'px',
			'min-width-m': '4',
			'max-height-unit-m': 'px',
			'max-height-m': '1',
			'height-unit-m': 'px',
			'height-m': '2',
			'min-height-unit-m': 'px',
			'min-height-m': '2',
			'max-width-unit-s': 'px',
			'max-width-s': '3',
			'width-unit-s': 'px',
			'width-s': '4',
			'min-width-unit-s': 'px',
			'min-width-s': '1',
			'max-height-unit-s': 'px',
			'max-height-s': '1',
			'height-unit-s': 'px',
			'height-s': '1',
			'min-height-unit-s': 'px',
			'min-height-s': '2',
			'max-width-unit-xs': 'px',
			'max-width-xs': '3',
			'width-unit-xs': 'px',
			'width-xs': '4',
			'min-width-unit-xs': 'px',
			'min-width-xs': '1',
			'max-height-unit-xs': 'px',
			'max-height-xs': '2',
			'height-unit-xs': 'px',
			'height-xs': '3',
			'min-height-unit-xs': 'px',
			'min-height-xs': '4',
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with force aspect ratio', () => {
		const object = {
			'size-advanced-options': true,
			'max-width-unit-general': 'px',
			'max-width-general': '2',
			'width-unit-general': 'px',
			'width-general': '1',
			'min-width-unit-general': 'px',
			'min-width-general': '2',
			'max-height-unit-general': 'px',
			'max-height-general': '3',
			'height-unit-general': 'px',
			'height-general': '4',
			'min-height-unit-general': 'px',
			'min-height-general': '1',
			'max-width-unit-xxl': 'px',
			'max-width-xxl': '2',
			'width-unit-xxl': 'px',
			'width-xxl': '3',
			'min-width-unit-xxl': 'px',
			'min-width-xxl': '4',
			'max-height-unit-xxl': 'px',
			'max-height-xxl': '1',
			'height-unit-xxl': 'px',
			'height-xxl': '2',
			'min-height-unit-xxl': 'px',
			'min-height-xxl': '2',
			'max-width-unit-xl': 'px',
			'max-width-xl': '3',
			'width-unit-xl': 'px',
			'width-xl': '4',
			'min-width-unit-xl': 'px',
			'min-width-xl': '1',
			'max-height-unit-xl': 'px',
			'max-height-xl': '2',
			'force-aspect-ratio-xl': true,
			'min-height-xl': '4',
			'max-width-unit-l': 'px',
			'max-width-l': '2',
			'width-unit-l': 'px',
			'width-l': '1',
			'min-width-unit-l': 'px',
			'min-width-l': '3',
			'max-height-unit-l': 'px',
			'max-height-l': '2',
			'min-height-unit-l': 'px',
			'min-height-l': '1',
			'max-width-unit-m': 'px',
			'max-width-m': '2',
			'width-unit-m': 'px',
			'width-m': '3',
			'min-width-unit-m': 'px',
			'min-width-m': '4',
			'max-height-unit-m': 'px',
			'max-height-m': '1',
			'min-height-unit-m': 'px',
			'min-height-m': '2',
			'max-width-unit-s': 'px',
			'max-width-s': '3',
			'width-unit-s': 'px',
			'width-s': '4',
			'min-width-unit-s': 'px',
			'min-width-s': '1',
			'max-height-unit-s': 'px',
			'max-height-s': '1',
			'height-unit-s': 'px',
			'height-s': '1',
			'min-height-unit-s': 'px',
			'min-height-s': '2',
			'max-width-unit-xs': 'px',
			'max-width-xs': '3',
			'width-unit-xs': 'px',
			'width-xs': '4',
			'min-width-unit-xs': 'px',
			'min-width-xs': '1',
			'max-height-unit-xs': 'px',
			'max-height-xs': '2',
			'height-unit-xs': 'px',
			'height-xs': '3',
			'min-height-unit-xs': 'px',
			'min-height-xs': '4',
		};
		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with width fit content', () => {
		const object = {
			'size-advanced-options': true,
			'max-width-unit-general': 'px',
			'max-width-general': '2',
			'width-unit-general': 'px',
			'width-general': 'fit-content',
			'min-width-unit-general': 'px',
			'min-width-general': '2',
			'max-height-unit-general': 'px',
			'max-height-general': '3',
			'height-unit-general': 'px',
			'height-general': '4',
			'min-height-unit-general': 'px',
			'min-height-general': '1',
			'max-width-unit-xxl': 'px',
			'max-width-xxl': '2',
			'width-unit-xxl': 'px',
			'width-xxl': '3',
			'min-width-unit-xxl': 'px',
			'min-width-xxl': '4',
			'max-height-unit-xxl': 'px',
			'max-height-xxl': '1',
			'height-unit-xxl': 'px',
			'height-xxl': '2',
			'min-height-unit-xxl': 'px',
			'min-height-xxl': '2',
			'max-width-unit-xl': 'px',
			'max-width-xl': '3',
			'width-unit-xl': 'px',
			'width-xl': '4',
			'min-width-unit-xl': 'px',
			'min-width-xl': '1',
			'max-height-unit-xl': 'px',
			'max-height-xl': '2',
			'min-height-unit-xl': 'px',
			'min-height-xl': '4',
			'max-width-unit-l': 'px',
			'max-width-l': '2',
			'width-unit-l': 'px',
			'width-l': '1',
			'min-width-unit-l': 'px',
			'min-width-l': '3',
			'max-height-unit-l': 'px',
			'max-height-l': '2',
			'min-height-unit-l': 'px',
			'min-height-l': '1',
			'max-width-unit-m': 'px',
			'max-width-m': '2',
			'width-unit-m': 'px',
			'width-m': '3',
			'min-width-unit-m': 'px',
			'min-width-m': '4',
			'max-height-unit-m': 'px',
			'max-height-m': '1',
			'min-height-unit-m': 'px',
			'min-height-m': '2',
			'max-width-unit-s': 'px',
			'max-width-s': '3',
			'width-unit-s': 'px',
			'width-s': '4',
			'min-width-unit-s': 'px',
			'min-width-s': '1',
			'max-height-unit-s': 'px',
			'max-height-s': '1',
			'height-unit-s': 'px',
			'height-s': '1',
			'min-height-unit-s': 'px',
			'min-height-s': '2',
			'max-width-unit-xs': 'px',
			'max-width-xs': '3',
			'width-unit-xs': 'px',
			'width-xs': '4',
			'min-width-unit-xs': 'px',
			'min-width-xs': '1',
			'max-height-unit-xs': 'px',
			'max-height-xs': '2',
			'height-unit-xs': 'px',
			'height-xs': '3',
			'min-height-unit-xs': 'px',
			'min-height-xs': '4',
			'width-fit-content-general': true,
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with full width', () => {
		const object = {
			'full-width-general': true,
			'full-width-l': false,
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with full width 2', () => {
		const object = {
			'size-advanced-options': true,
			'full-width-general': true,
			'full-width-xl': false,
			'full-width-l': true,
			'min-width-l': '2',
			'min-width-unit-l': 'px',
			'full-width-m': false,
			'min-width-m': '3',
			'min-width-s': '0',
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with full width 3', () => {
		const object = {
			'full-width-general': true,
			'size-advanced-options': true,
			'max-width-unit-general': 'px',
			'max-width-general': '2',
			'width-unit-general': 'px',
			'width-general': 'fit-content',
			'min-width-unit-general': 'px',
			'min-width-general': '2',
			'max-height-unit-general': 'px',
			'max-height-general': '3',
			'height-unit-general': 'px',
			'height-general': '4',
			'min-height-unit-general': 'px',
			'min-height-general': '1',
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with full width responsive', () => {
		const object = {
			'full-width-general': true,
			'size-advanced-options': true,
			'max-width-unit-general': 'px',
			'max-width-general': '2',
			'width-unit-general': 'px',
			'width-general': 'fit-content',
			'min-width-unit-general': 'px',
			'min-width-general': '2',
			'max-height-unit-general': 'px',
			'max-height-general': '3',
			'height-unit-general': 'px',
			'height-general': '4',
			'min-height-unit-general': 'px',
			'min-height-general': '1',
			'full-width-xxl': false,
			'max-width-unit-xxl': 'px',
			'max-width-xxl': '2',
			'width-unit-xxl': 'px',
			'width-xxl': '3',
			'min-width-unit-xxl': 'px',
			'min-width-xxl': '4',
			'max-height-unit-xxl': 'px',
			'max-height-xxl': '1',
			'height-unit-xxl': 'px',
			'height-xxl': '2',
			'min-height-unit-xxl': 'px',
			'min-height-xxl': '2',
			'full-width-xl': true,
			'max-width-unit-xl': 'px',
			'max-width-xl': '3',
			'width-unit-xl': 'px',
			'width-xl': '4',
			'min-width-unit-xl': 'px',
			'min-width-xl': '1',
			'max-height-unit-xl': 'px',
			'max-height-xl': '2',
			'min-height-unit-xl': 'px',
			'min-height-xl': '4',
			'full-width-l': false,
			'max-width-unit-l': 'px',
			'max-width-l': '2',
			'width-unit-l': 'px',
			'width-l': '1',
			'min-width-unit-l': 'px',
			'min-width-l': '3',
			'max-height-unit-l': 'px',
			'max-height-l': '2',
			'min-height-unit-l': 'px',
			'min-height-l': '1',
			'full-width-m': true,
			'max-width-unit-m': 'px',
			'max-width-m': '2',
			'width-unit-m': 'px',
			'width-m': '3',
			'min-width-unit-m': 'px',
			'min-width-m': '4',
			'max-height-unit-m': 'px',
			'max-height-m': '1',
			'min-height-unit-m': 'px',
			'min-height-m': '2',
			'full-width-s': false,
			'max-width-unit-s': 'px',
			'max-width-s': '3',
			'width-unit-s': 'px',
			'width-s': '4',
			'min-width-unit-s': 'px',
			'min-width-s': '1',
			'max-height-unit-s': 'px',
			'max-height-s': '1',
			'height-unit-s': 'px',
			'height-s': '1',
			'min-height-unit-s': 'px',
			'min-height-s': '2',
			'full-width-xs': true,
			'max-width-unit-xs': 'px',
			'max-width-xs': '3',
			'width-unit-xs': 'px',
			'width-xs': '4',
			'min-width-unit-xs': 'px',
			'min-width-xs': '1',
			'max-height-unit-xs': 'px',
			'max-height-xs': '2',
			'height-unit-xs': 'px',
			'height-xs': '3',
			'min-height-unit-xs': 'px',
			'min-height-xs': '4',
			'width-fit-content-general': true,
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});

	it('Get a correct size styles with full width responsive 2', () => {
		const object = {
			'full-width-general': false,
			'size-advanced-options': true,
			'max-width-unit-general': 'px',
			'max-width-general': '2',
			'width-unit-general': 'px',
			'width-general': 'fit-content',
			'min-width-unit-general': 'px',
			'min-width-general': '2',
			'max-height-unit-general': 'px',
			'max-height-general': '3',
			'height-unit-general': 'px',
			'height-general': '4',
			'min-height-unit-general': 'px',
			'min-height-general': '1',
			'full-width-xxl': true,
			'max-width-unit-xxl': 'px',
			'max-width-xxl': '2',
			'width-unit-xxl': 'px',
			'width-xxl': '3',
			'min-width-unit-xxl': 'px',
			'min-width-xxl': '4',
			'max-height-unit-xxl': 'px',
			'max-height-xxl': '1',
			'height-unit-xxl': 'px',
			'height-xxl': '2',
			'min-height-unit-xxl': 'px',
			'min-height-xxl': '2',
			'full-width-xl': false,
			'max-width-unit-xl': 'px',
			'max-width-xl': '3',
			'width-unit-xl': 'px',
			'width-xl': '4',
			'min-width-unit-xl': 'px',
			'min-width-xl': '1',
			'max-height-unit-xl': 'px',
			'max-height-xl': '2',
			'min-height-unit-xl': 'px',
			'min-height-xl': '4',
			'full-width-l': true,
			'max-width-unit-l': 'px',
			'max-width-l': '2',
			'width-unit-l': 'px',
			'width-l': '1',
			'min-width-unit-l': 'px',
			'min-width-l': '3',
			'max-height-unit-l': 'px',
			'max-height-l': '2',
			'min-height-unit-l': 'px',
			'min-height-l': '1',
			'full-width-m': false,
			'max-width-unit-m': 'px',
			'max-width-m': '2',
			'width-unit-m': 'px',
			'width-m': '3',
			'max-height-unit-m': 'px',
			'max-height-m': '1',
			'min-height-unit-m': 'px',
			'min-height-m': '2',
			'full-width-s': true,
			'max-width-unit-s': 'px',
			'max-width-s': '3',
			'width-unit-s': 'px',
			'width-s': '4',
			'max-height-unit-s': 'px',
			'max-height-s': '1',
			'height-unit-s': 'px',
			'height-s': '1',
			'min-height-unit-s': 'px',
			'min-height-s': '2',
			'full-width-xs': false,
			'max-width-unit-xs': 'px',
			'max-width-xs': '3',
			'width-unit-xs': 'px',
			'width-xs': '4',
			'min-width-unit-xs': 'px',
			'min-width-xs': '1',
			'max-height-unit-xs': 'px',
			'max-height-xs': '2',
			'height-unit-xs': 'px',
			'height-xs': '3',
			'min-height-unit-xs': 'px',
			'min-height-xs': '4',
			'width-fit-content-general': true,
		};

		const result = getSizeStyles(object);
		expect(result).toMatchSnapshot();
	});
});
