// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSizeStyles Get a correct size styles 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "1px",
  },
  "l": Object {
    "height": "1px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "1px",
  },
  "m": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
  "s": Object {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "4px",
  },
  "xl": Object {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xs": Object {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with force aspect ratio 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "1px",
  },
  "l": Object {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "1px",
  },
  "m": Object {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
  "s": Object {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "4px",
  },
  "xl": Object {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xs": Object {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width 1`] = `
Object {
  "general": Object {
    "min-width": "100%",
  },
  "l": Object {
    "min-width": "initial",
  },
  "m": Object {
    "min-width": "initial",
  },
  "s": Object {
    "min-width": "initial",
  },
  "xl": Object {
    "min-width": "100%",
  },
  "xs": Object {
    "min-width": "initial",
  },
  "xxl": Object {
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width 2 1`] = `
Object {
  "general": Object {
    "min-width": "100%",
  },
  "l": Object {
    "min-width": "100%",
  },
  "m": Object {
    "min-width": "3px",
  },
  "s": Object {
    "min-width": "0px",
  },
  "xl": Object {
    "min-width": "initial",
  },
  "xs": Object {
    "min-width": "0px",
  },
  "xxl": Object {
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width 3 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "l": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "m": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "s": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "xl": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "xs": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "xxl": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width responsive 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "l": Object {
    "height": "4px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "fit-content",
  },
  "m": Object {
    "height": "4px",
    "max-height": "1px",
    "min-height": "2px",
    "min-width": "100%",
  },
  "s": Object {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xl": Object {
    "height": "4px",
    "max-height": "2px",
    "min-height": "4px",
    "min-width": "100%",
  },
  "xs": Object {
    "height": "3px",
    "max-height": "2px",
    "min-height": "4px",
    "min-width": "100%",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "fit-content",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width responsive 2 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "fit-content",
  },
  "l": Object {
    "height": "4px",
    "max-height": "2px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "m": Object {
    "height": "4px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "3px",
    "width": "fit-content",
  },
  "s": Object {
    "height": "1px",
    "max-height": "1px",
    "min-height": "2px",
    "min-width": "100%",
  },
  "xl": Object {
    "height": "4px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xs": Object {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "min-height": "2px",
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with width fit content 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "fit-content",
  },
  "l": Object {
    "height": "4px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "fit-content",
  },
  "m": Object {
    "height": "4px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "fit-content",
  },
  "s": Object {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xl": Object {
    "height": "4px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xs": Object {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "fit-content",
  },
}
`;
